<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Auth.AuthActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            android:text="@string/auth"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="50dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="18sp"
                android:textColor="@color/colorPrimaryDark"
                android:paddingRight="10dp"
                android:elevation="15dp"
                />

            <EditText
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:textColorLink="@android:color/black"
                android:textSize="18sp"
                android:inputType="textPersonName"
                android:id="@+id/loginId"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:elevation="15dp"/>

            <EditText
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:textColorLink="@android:color/black"
                android:textSize="18sp"
                android:inputType="textPassword"
                android:id="@+id/passwordId"/>
        </LinearLayout>
        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/signIn"
            android:elevation="15dp"
            android:id="@+id/signId"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>