<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Device.OneDeviceActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="left"
        android:layout_margin="10sp"
        android:layout_marginTop="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/typeDevId"
            android:text="asdsad"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginTop="10sp"
            android:layout_marginLeft="10sp"
            android:textSize="23sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nameDevId"
                android:layout_marginLeft="10sp"
                android:text="asdsad"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"/>
            <!--<TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/valueOne"
                android:text="asdsad"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginLeft="10sp"
                android:textSize="18dp"/> -->
        </LinearLayout>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/karnizAndZamokGroup"
            android:visibility="gone">
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/open"
                android:id="@+id/openId"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/close"
                android:id="@+id/closeId"/>
        </RadioGroup>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lustraAndSvet"
            android:visibility="gone">
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/on"
                android:id="@+id/onId"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/off"
                android:id="@+id/offId"/>
        </RadioGroup>

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tempId"
            android:max="200"
            android:progress="10"
            android:visibility="gone"/>
        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/termostatId"
            android:max="40"
            android:progress="10"
            android:visibility="visible"/>
    </LinearLayout>


</LinearLayout>